fixed: nav actions and collapsing to behave more consistentlyu

--- a/core/src/Nav/Node/Node.less
+++ b/core/src/Nav/Node/Node.less
@@ -4,8 +4,6 @@
   display: flex;
   align-items: baseline;
   border-radius: 0 0 0 3px;
-  // max-height: 80px;
-  // transition: max-height 0.2s ease;
   user-select: none;
 
   &:hover {
@@ -17,19 +15,8 @@
     }
   }
 
-  i {
-    color: @zesty-gray;
-    cursor: pointer;
-    padding: 8px;
-
-    &:hover,
-    &:active,
-    &:focus {
-      color: @zesty-white;
-    }
-  }
-
-  a {
+  a,
+  .directory {
     text-decoration: none;
     color: @zesty-light-blue;
     flex: 1;
@@ -40,9 +27,31 @@
       margin-right: 8px;
     }
   }
+}
 
-  .hide {
-    visibility: hidden;
+.collapse {
+  color: @zesty-gray;
+  cursor: pointer;
+  padding: 8px;
+
+  &:hover,
+  &:active,
+  &:focus {
+    color: @zesty-white;
+  }
+}
+
+.hide {
+  visibility: hidden;
+}
+
+.action {
+  color: @zesty-gray;
+
+  &:hover,
+  &:active,
+  &:focus {
+    color: @zesty-white;
   }
 }
 
